Wow the two channels are working, now I just need notebooks that can process that data.

--- a/Debugging Scripts/2D scans.ipynb
+++ b/Debugging Scripts/2D scans.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,9 @@
       "\t\\Scans\\test_20.json\n",
       "\t\\Scans\\test_21.json\n",
       "\t\\Scans\\test_22.json\n",
-      "\t\\Scans\\test_23.json\n"
+      "\t\\Scans\\test_23.json\n",
+      "\t\\Scans\\test_24.json\n",
+      "\t\\Scans\\test_25.json\n"
      ]
     }
    ],
@@ -95,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "debug_mode = True\n",
     "save_figs = False\n",
-    "file_no = 23\n",
+    "file_no = 25\n",
     "\n",
     "if save_figs:\n",
     "    plt.rcParams['figure.dpi'] = 500\n",
@@ -116,23 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\Scans\\test_23.json\n",
-      "range of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-10, 10], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
-      "resolution: [0.6, 2]\n",
-      "max_point: [0.0, 0.0, -1.5384615384615383, 6.0, 0.0, 0.0, 0.98867]\n",
-      "points: [-1.5384615384615383, -8.0, 0.32961]\n",
+      "c:\\Users\\BAIL_SD_OCE\\Documents\\COBOT_Code\\COBOT-Transducer-Control-Code\\Scans\\test_25.json\n",
+      "range of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-12, 12], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
+      "resolution: [0.4, 1]\n",
+      "max_point: [0.0, 0.0, -2.8, 3.0, 0.0, 0.0, 0.99687, 0.0]\n",
+      "points: [-1.1999999999999997, -11.0, 0.91649, 0.00203]\n",
       "notes: No notes passed from setup.\n",
       "Ellipsoidal version of a fullscan module, scans an n-ellipse around the origin at a fixed resolution.\n",
-      "\tRange of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-10, 10], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
-      "\tResolution: (0.6, 2)\n",
-      "\tHighest magnitude found: [ 0.00  0.00 -1.54  6.00  0.00  0.00  0.99]\n",
+      "\tRange of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-12, 12], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
+      "\tResolution: (0.4, 1)\n",
+      "\tHighest magnitude found: [ 0.00  0.00 -2.80  3.00  0.00  0.00  1.00  0.00]\n",
       "active_ROM: ['Z', 'Rx']\n"
      ]
     }
@@ -165,24 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Z     -1.538462\n",
-      "Rx     6.000000\n",
-      "mag    0.988670\n",
-      "Name: 81, dtype: float64\n",
-      "          Z   Rx      mag\n",
-      "0 -1.538462 -8.0  0.32961\n",
-      "1 -0.923077 -8.0 -0.28929\n",
-      "2 -0.307692 -8.0 -0.41576\n",
-      "3  0.307692 -8.0 -0.49999\n",
-      "4  0.923077 -8.0  0.28248\n",
-      "(97, 3)\n"
+     "ename": "ValueError",
+     "evalue": "Shape of passed values is (372, 4), indices imply (372, 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m cols \u001b[39m=\u001b[39m active_rom\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m      4\u001b[0m cols\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m dat \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mDataFrame(data\u001b[39m=\u001b[39;49mnp_all, columns\u001b[39m=\u001b[39;49mcols)\n\u001b[0;32m      7\u001b[0m mp \u001b[39m=\u001b[39m dat\u001b[39m.\u001b[39mloc[dat[\u001b[39m'\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39midxmax()]\n\u001b[0;32m      9\u001b[0m \u001b[39mif\u001b[39;00m debug_mode:\n",
+      "File \u001b[1;32mc:\\Users\\BAIL_SD_OCE\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\frame.py:721\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    711\u001b[0m         mgr \u001b[39m=\u001b[39m dict_to_mgr(\n\u001b[0;32m    712\u001b[0m             \u001b[39m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001b[39;00m\n\u001b[0;32m    713\u001b[0m             \u001b[39m# attribute \"name\"\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    718\u001b[0m             typ\u001b[39m=\u001b[39mmanager,\n\u001b[0;32m    719\u001b[0m         )\n\u001b[0;32m    720\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 721\u001b[0m         mgr \u001b[39m=\u001b[39m ndarray_to_mgr(\n\u001b[0;32m    722\u001b[0m             data,\n\u001b[0;32m    723\u001b[0m             index,\n\u001b[0;32m    724\u001b[0m             columns,\n\u001b[0;32m    725\u001b[0m             dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[0;32m    726\u001b[0m             copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[0;32m    727\u001b[0m             typ\u001b[39m=\u001b[39;49mmanager,\n\u001b[0;32m    728\u001b[0m         )\n\u001b[0;32m    730\u001b[0m \u001b[39m# For data is list-like, or Iterable (will consume into list)\u001b[39;00m\n\u001b[0;32m    731\u001b[0m \u001b[39melif\u001b[39;00m is_list_like(data):\n",
+      "File \u001b[1;32mc:\\Users\\BAIL_SD_OCE\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:349\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[1;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[0;32m    344\u001b[0m \u001b[39m# _prep_ndarraylike ensures that values.ndim == 2 at this point\u001b[39;00m\n\u001b[0;32m    345\u001b[0m index, columns \u001b[39m=\u001b[39m _get_axes(\n\u001b[0;32m    346\u001b[0m     values\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], values\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], index\u001b[39m=\u001b[39mindex, columns\u001b[39m=\u001b[39mcolumns\n\u001b[0;32m    347\u001b[0m )\n\u001b[1;32m--> 349\u001b[0m _check_values_indices_shape_match(values, index, columns)\n\u001b[0;32m    351\u001b[0m \u001b[39mif\u001b[39;00m typ \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39marray\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    353\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39missubclass\u001b[39m(values\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mtype, \u001b[39mstr\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\BAIL_SD_OCE\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:420\u001b[0m, in \u001b[0;36m_check_values_indices_shape_match\u001b[1;34m(values, index, columns)\u001b[0m\n\u001b[0;32m    418\u001b[0m passed \u001b[39m=\u001b[39m values\u001b[39m.\u001b[39mshape\n\u001b[0;32m    419\u001b[0m implied \u001b[39m=\u001b[39m (\u001b[39mlen\u001b[39m(index), \u001b[39mlen\u001b[39m(columns))\n\u001b[1;32m--> 420\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mShape of passed values is \u001b[39m\u001b[39m{\u001b[39;00mpassed\u001b[39m}\u001b[39;00m\u001b[39m, indices imply \u001b[39m\u001b[39m{\u001b[39;00mimplied\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Shape of passed values is (372, 4), indices imply (372, 3)"
      ]
     }
    ],
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
