Idk why it didn't go the first time but here goes

--- a/Debugging Scripts/2D scans.ipynb
+++ b/Debugging Scripts/2D scans.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -53,59 +53,44 @@
      "output_type": "stream",
      "text": [
       "Available test files:\n",
-      "\t\\Scans\\test_0.json\n",
-      "\t\\Scans\\test_1.json\n",
-      "\t\\Scans\\test_2.json\n",
-      "\t\\Scans\\test_3.json\n",
-      "\t\\Scans\\test_4.json\n",
-      "\t\\Scans\\test_5.json\n",
-      "\t\\Scans\\test_6.json\n",
-      "\t\\Scans\\test_7.json\n",
-      "\t\\Scans\\test_8.json\n",
-      "\t\\Scans\\test_9.json\n",
-      "\t\\Scans\\test_10.json\n",
-      "\t\\Scans\\test_11.json\n",
-      "\t\\Scans\\test_12.json\n",
-      "\t\\Scans\\test_13.json\n",
-      "\t\\Scans\\test_14.json\n",
-      "\t\\Scans\\test_15.json\n",
-      "\t\\Scans\\test_16.json\n",
-      "\t\\Scans\\test_17.json\n",
-      "\t\\Scans\\test_18.json\n",
-      "\t\\Scans\\test_19.json\n",
-      "\t\\Scans\\test_20.json\n",
-      "\t\\Scans\\test_21.json\n",
-      "\t\\Scans\\test_22.json\n",
-      "\t\\Scans\\test_23.json\n",
-      "\t\\Scans\\test_24.json\n",
-      "\t\\Scans\\test_25.json\n",
-      "\t\\Scans\\test_26.json\n",
-      "\t\\Scans\\test_27.json\n"
+      "\t\\Scans\\OCE_Scans\\oce_test_0.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_1.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_2.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_3.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_4.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_5.json\n",
+      "\t\\Scans\\OCE_Scans\\oce_test_6.json\n"
      ]
     }
    ],
    "source": [
     "path = os.path.abspath('..\\\\')\n",
     "print(\"Available test files:\")\n",
+    "\n",
+    "## Uncomment this to access immersion transducer scans\n",
+    "# file_itr = 0\n",
+    "# while os.path.exists(path + \"\\\\Scans\\\\Immersion_Transducer_Scans\\\\test_%s.json\" % file_itr):\n",
+    "#     print(\"\\t\\\\Scans\\\\Immersion_Transducer_Scans\\\\test_%s.json\" % file_itr)\n",
+    "#     file_itr +=1\n",
+    "\n",
     "file_itr = 0\n",
-    "while os.path.exists(path + \"\\\\Scans\\\\test_%s.json\" % file_itr):\n",
-    "    print(\"\\t\\\\Scans\\\\test_%s.json\" % file_itr)\n",
-    "    file_itr +=1\n",
-    "file_itr = 0\n",
-    "while os.path.exists(path + \"\\\\Debugging Scripts\\\\test_%s.json\" % file_itr):\n",
-    "    print(\"\\t\\\\Debugging Scripts\\\\test_%s.json\" % file_itr)\n",
+    "while os.path.exists(path + \"\\\\Scans\\\\OCE_Scans\\\\oce_test_%s.json\" % file_itr):\n",
+    "    print(\"\\t\\\\Scans\\\\OCE_Scans\\\\oce_test_%s.json\" % file_itr)\n",
     "    file_itr +=1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "debug_mode = True\n",
     "save_figs = False\n",
-    "file_no = 26\n",
+    "file_no = 1\n",
+    "\n",
+    "# plt.style.use(\"dark_background\")\n",
+    "plt.style.use(\"default\")\n",
     "\n",
     "if save_figs:\n",
     "    plt.rcParams['figure.dpi'] = 500\n",
@@ -120,31 +105,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\Scans\\test_26.json\n",
-      "range of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-5, 5], 'Rx': [-12, 12], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
-      "data_channels: 2\n",
-      "resolution: [0.2, 1]\n",
-      "max_point: [0.0, 0.0, -4.2, -1.0, 0.0, 0.0, 1.0, 0.0]\n",
-      "points: [-1.7999999999999998, -11.0, 0.61292, 0.0]\n",
+      "c:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\Scans\\OCE_Scans\\oce_test_1.json\n",
+      "range of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-10, 10], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
+      "resolution: [0.6, 2]\n",
+      "max_point: [0.0, 0.0, -1.5384615384615383, 6.0, 0.0, 0.0, 0.98867]\n",
+      "points: [-1.5384615384615383, -8.0, 0.32961]\n",
       "notes: No notes passed from setup.\n",
       "Ellipsoidal version of a fullscan module, scans an n-ellipse around the origin at a fixed resolution.\n",
-      "\tRange of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-5, 5], 'Rx': [-12, 12], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
-      "\tResolution: (0.2, 1)\n",
-      "\tHighest magnitude found: [ 0.00  0.00 -4.20 -1.00  0.00  0.00  1.00  0.00]\n",
+      "\tRange of motion: {'X': [0, 0], 'Y': [0, 0], 'Z': [-4, 4], 'Rx': [-10, 10], 'Ry': [0, 0], 'Rz': [0, 0]}\n",
+      "\tResolution: (0.6, 2)\n",
+      "\tHighest magnitude found: [ 0.00  0.00 -1.54  6.00  0.00  0.00  0.99]\n",
       "active_ROM: ['Z', 'Rx']\n"
      ]
     }
    ],
    "source": [
     "# current_file = r\"\\Debugging Scripts\\test_%s.json\" % file_no\n",
-    "current_file = r\"\\Scans\\test_%s.json\" % file_no\n",
+    "current_file = rf\"\\Scans\\OCE_Scans\\oce_test_{file_no}.json\"\n",
     "path = os.path.abspath('..\\\\') + current_file\n",
     "\n",
     "if debug_mode:\n",
